fix: the gap of images in mobile in deletion of candidates in config position

--- a/src/styles/scss/config-candidate-position.scss
+++ b/src/styles/scss/config-candidate-position.scss
@@ -251,6 +251,15 @@ body dialog.modal-native {
             flex-wrap: wrap;
             justify-content: center;
             gap: clamp(0.5rem, 0.25rem + 0.75vw + 1.5vh, 3rem) 0;
+
+
+            @media only screen and (max-width: 576px) {
+                gap: clamp(0.5rem, 0.25rem + 0.75vw + 1.5vh, 3rem);
+            }
+
+
+
+
             overflow-y: auto;
 
             &::-webkit-scrollbar {
@@ -266,8 +275,8 @@ body dialog.modal-native {
                 justify-self: center;
                 border-radius: 50%;
                 border: calc(1px + 0.1dvw) solid var(--main-color);
-                max-width: clamp(2.375rem, 1.25rem + 3dvw + 4dvh, 5rem);
-                max-height: clamp(2.375rem, 1.25rem + 3dvw + 4dvh, 5rem);
+                max-width: clamp(2.375rem, 1rem + 4dvw + 0.5dvh, 5rem);
+                max-height: clamp(2.375rem, 1rem + 4dvw + 0.5dvh, 5rem);
                 overflow: clip;
                 aspect-ratio: 1/1;
 
@@ -276,6 +285,13 @@ body dialog.modal-native {
                     height: 100%;
                     aspect-ratio: 1/1;
                 }
+            }
+
+            .name {
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
             }
         }
     }
